# ts_ethz_gazebo

./: CMakeLists.txt  build.sh  package.xml
cmake/: FindTinyXML.cmake
include/: common.h  gazebo_imu_plugin.h  gazebo_motor_model.h
include/liftdrag_plugin/: liftdrag_plugin.h
include/rotors_model/: motor_controller.hpp  motor_model.hpp  multi_copter.hpp
launch/: hello.launch  push_model.launch  ts_ethz.launch
models/ts_ethz/: model.config  ts_ethz.sdf
msgs/: CMakeLists.txt
src/: gazebo_imu_plugin.cpp  gazebo_motor_model.cpp  hello_world_plugin.cpp  liftdrag_plugin.cpp  model_push.cpp
worlds/: hello.world  push_model.world  ts_ethz.world
